WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252399
[GStreamer][WebRTC] Fixes for disabled audio tracks
https://bugs.webkit.org/show_bug.cgi?id=252399
Summary
[GStreamer][WebRTC] Fixes for disabled audio tracks
Philippe Normand
Reported
2023-02-16 07:49:02 PST
We don't need a valve in outgoing tracks. I misunderstood the meaning of muted and enabled semantics in MediaStreamTrack.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-02-17 02:48:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10262
EWS
Comment 2
2023-02-22 02:25:07 PST
Committed
260669@main
(08a6948cfbbf): <
https://commits.webkit.org/260669@main
> Reviewed commits have been landed. Closing PR #10262 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-22 02:26:18 PST
<
rdar://problem/105770988
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug