Cherry-pick 260669@main (08a6948cfbbf). https://bugs.webkit.org/show_bug.cgi?id=252399

[GStreamer][WebRTC] Fixes for disabled audio tracks
    https://bugs.webkit.org/show_bug.cgi?id=252399

    Reviewed by Xabier Rodriguez-Calvar.

    We should not interrupt the data flow when an outgoing media track has been disabled.
    `MediaStreamTrack::enabled` is like muted, but it's a state that can be changed by the app, in
    opposition with muted. So there's no need for a valve element in outgoing sources.

    This patch also refactors silent/black samples pushing code in the mediastreamsrc element, some of
    it was previously unsafe. And we make sure that outgoing buffers always have a valid PTS and DTS.

    * LayoutTests/platform/glib/TestExpectations:
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingAudioSourceGStreamer::setPayloadType):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::RealtimeOutgoingMediaSourceGStreamer):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::~RealtimeOutgoingMediaSourceGStreamer):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::start):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::stop):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::sourceMutedChanged):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::sourceEnabledChanged):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::initializeFromTrack):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.h:
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::teardown):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingVideoSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::RealtimeOutgoingVideoSourceGStreamer):
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::teardown):
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::setPayloadType):
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::startUpdatingStats):
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::stopUpdatingStats):
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::sourceEnabledChanged):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingVideoSourceGStreamer.h:

    Canonical link: https://commits.webkit.org/260669@main